src/objects/Cricket_Actual_Team__c.object
<CustomObject>
    <description>Stores actual team details like Name.Description, Points statistics etc.</description>
    <fields>
        <fullName>Match_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes Total Match Points of Team.</description>
        <inlineHelpText>Denotes Total Match Points of Team.</inlineHelpText>
        <label>Match Points</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matches_Lost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes number of matches lost.</description>
        <inlineHelpText>Denotes number of matches lost.</inlineHelpText>
        <label>Matches Lost</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matches_Played__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes number of matches played.</description>
        <inlineHelpText>Denotes number of matches played.</inlineHelpText>
        <label>Matches Played</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matches_Won__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes number of matches won.</description>
        <inlineHelpText>Denotes number of matches won</inlineHelpText>
        <label>Matches Won</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Run_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Denotes NRR pf Team.</description>
        <inlineHelpText>Denotes NRR pf Team.</inlineHelpText>
        <label>Net Run Rate</label>
        <precision>6</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Description__c</fullName>
        <description>Stores Team Description.</description>
        <inlineHelpText>Stores Team Description.</inlineHelpText>
        <label>Team&apos;s Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Cricket Actual Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Matches_Played__c</columns>
        <columns>Matches_Won__c</columns>
        <columns>Matches_Lost__c</columns>
        <columns>Net_Run_Rate__c</columns>
        <columns>Match_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cricket Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cricket Actual Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>